--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,9 +1,10 @@
 .calendar {
   display: flex;
-  position: relative;
+  position: absolute;
 
-  top: 25px;
-  left: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   flex-wrap: wrap;
 
